Added files via upload

--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
 <body>
 	<h2> Javascript Does Math</h2>
 
-	
-	<p id="addme"></p>
-	<p id="subtractme"></p>
-	<p id="multiplyme"></p>
-	<p id="divideme"></p>
+<div>
+	<form>
+	And, you can too!
+	<br>
+	<br>
+	Number One: 
+	<input type="number" id="firstInput">
+	<br>
+	<br> 
+	Number Two: 
+	<input type="number" id="secondInput">
+	<br>
+	<br>
+	</form>
+
+	<button id="add"> + </button>
+	<button id="subtract"> - </button>
+	<button id="multiply"> * </button>
+	<button id="divide"> / </button>
+</div>
+
+<div id="result"></div>
 
 	<script type="text/javascript" src="javascript.js"></script>
 </body>
